# easy-imgui-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml
dear_imgui/: Cargo.toml
dear_imgui-sys/: Cargo.toml  build.rs  imgui  wrapper.cpp
dear_imgui-sys/src/: lib.rs
dear_imgui/src/: enums.rs  lib.rs  style.rs
dear_imgui_renderer/: Cargo.toml
dear_imgui_renderer/src/: conv.rs  glr.rs  lib.rs  renderer.rs  shader.glsl  shader_es.glsl  window.rs
dear_imgui_window/: Cargo.toml
dear_imgui_window/src/: conv.rs  lib.rs  window.rs
easy-imgui/: Cargo.toml
easy-imgui-filechooser/: Cargo.toml  README.md  build.rs
easy-imgui-filechooser/examples/: filechooser_demo.rs  openfile_demo.rs
easy-imgui-filechooser/locales/: cs.po  da.po  de.po  es.po  et.po  fi.po  fr.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  lt.po  lv.po  messages.pot  nb.po  nl.po  nn.po  pl.po  pt.po  ro.po  sk.po  sl.po  sq.po  sv.po  tr.po
easy-imgui-filechooser/src/: lib.rs  zipdirenum.rs
easy-imgui-opengl/: Cargo.toml  README.md
easy-imgui-opengl/src/: lib.rs
easy-imgui-renderer/: Cargo.toml
easy-imgui-renderer/src/: glr.rs  lib.rs  renderer.rs  shader.glsl
easy-imgui-sdl3/: Cargo.toml
easy-imgui-sdl3/examples/: sdl3_demo.rs  sdl3_ex1.rs
easy-imgui-sdl3/src/: fut.rs  lib.rs
easy-imgui-sys/: Cargo.toml  build.rs  hack_msvc.cpp  msvc_blocklist.txt  non-inlines.cpp  vecs.cpp  wrapper.cpp
easy-imgui-sys/src/: lib.rs
easy-imgui-window/: Cargo.toml
easy-imgui-window/examples/: demo.rs  game_loop.rs  gameloop.rs  gamepad.rs  idle.rs  misc.rs  multiwin.rs  pong.rs
easy-imgui-window/src/: conv.rs  lib.rs  viewports.rs  window.rs
easy-imgui-window/src/window/main_window/: fut.rs
easy-imgui-winit/: Cargo.toml
easy-imgui-winit/src/: conv.rs  lib.rs  state.rs
easy-imgui/examples/: demo.rs  gamepad.rs  misc.rs  multiwin.rs
easy-imgui/examples/fofofofo/: Cargo.toml
easy-imgui/src/: clipboard.rs  enums.rs  fontloader.rs  future.rs  idler.rs  lib.rs  multisel.rs  style.rs
easy-opengl/: Cargo.toml  README.md
example/: Cargo.toml
example/src/: glr.rs  main.rs  w.rs
gamepad/: Cargo.toml
gamepad/src/: main.rs
web/: Cargo.toml  index.html  web.js
web/src/: main.rs
