[workspace]
resolver = "3"
members = [
    "easy-imgui-sys",
    "easy-imgui",
    "easy-imgui-renderer",
    "easy-imgui-window",
    "easy-imgui-filechooser",
    "easy-imgui-opengl",
    "easy-imgui-sdl3",
]

[patch.crates-io]
easy-imgui-sys = { path = "easy-imgui-sys" }
easy-imgui = { path = "easy-imgui" }
easy-imgui-opengl = { path = "easy-imgui-opengl" }
easy-imgui-renderer = { path = "easy-imgui-renderer" }
easy-imgui-window = { path = "easy-imgui-window" }
easy-imgui-filechooser = { path = "easy-imgui-filechooser" }
easy-imgui-sdl3 = { path = "easy-imgui-sdl3" }

