[package]
name = "dear_imgui_renderer"
version = "0.1.0"
edition = "2021"

[features]
default = ["arboard"]

[dependencies]
dear_imgui-sys = { path = "../dear_imgui-sys" }
dear_imgui = { path = "../dear_imgui" }

anyhow = "*"
smallvec = "*"
cgmath = "*"

glow = "*"
glutin = "*"
glutin-winit = "*"
raw-window-handle = "*"
arboard = { version = "*", optional = true, default_features = false }
winit = { version = "*", features = ["x11", "mint"] }
