[package]
name = "dear_imgui_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dear_imgui-sys = { path = "../dear_imgui-sys" }
dear_imgui = { path = "../dear_imgui" }

anyhow = "1"
cgmath = "0.18"
smallvec = "1"
glow = "0.12"
log = "*"
