[package]
name = "easy-imgui-filechooser"
version = "0.1.4"
edition = "2021"
description = "File-chooser widget for easy-imgui"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rodrigorc/easy-imgui-rs"
categories = ["gui"]
keywords = ["imgui", "ui", "graphics"]

[features]
default = []
tr = ["dep:tr", "dep:include-po"]

[dependencies]
easy-imgui = { version = "0.9.1", path = "../easy-imgui" }
image = "0.25"
glob = "0.3"
time = { version = "0.3", features = ["macros", "formatting"] }
bitflags = "2"
bytesize = "1"
tr = { version = "0.1.10", default-features = false, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
easy-imgui-window = { version = "0.9.1", path = "../easy-imgui-window" }
sys-locale = "0.3"

[build-dependencies]
include-po = { version = "0.1", optional = true }
