[package]
name = "easy-imgui-filechooser"
version = "0.4.0"
edition = "2024"
description = "File-chooser widget for easy-imgui"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rodrigorc/easy-imgui-rs"
categories = ["gui"]
keywords = ["imgui", "ui", "graphics"]

[features]
default = []
tr = ["dep:tr", "dep:include-po"]
zip = ["dep:zip"]

[dependencies]
easy-imgui = "0.21"
image = "0.25"
glob = "0.3"
time = { version = "0.3", features = ["macros", "formatting"] }
bitflags = "2"
bytesize = "2"
tr = { version = "0.1.10", default-features = false, optional = true }
zip = { version = "8.5.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
easy-imgui-window = "0.21"
sys-locale = "0.3"

[build-dependencies]
include-po = { version = "0.2", optional = true }

[[example]]
name = "filechooser_demo"
required-features = ["zip"]