[package]
name = "easy-imgui-opengl"
version = "0.2.0"
edition = "2024"
description = "OpenGL helper types, designed to work with easy-imgui"
license = "MIT"
readme = "README.md"
categories = ["graphics"]
keywords = ["imgui", "ui", "graphics"]

[dependencies]
cgmath = "0.18.0"
glow = "0.16.0"
log = "0.4.22"
smallvec = "1.13.2"
