[package]
name = "easy-imgui-renderer"
version = "0.4.1"
edition = "2021"
description = "Default renderer for the easy-imgui crate, using OpenGl via glow"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/rodrigorc/easy-imgui-rs"
categories = ["gui"]
keywords = ["imgui", "ui", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-imgui-sys = { version = "=0.4.1", path = "../easy-imgui-sys" }
easy-imgui = { version = "=0.4.1", path = "../easy-imgui" }

anyhow = "1"
cgmath = "0.18"
smallvec = "1"
glow = "0.13"
log = "0.4"
