[package]
name = "easy-imgui-renderer"
version = "0.19.0"
edition = "2024"
description = "Default renderer for the easy-imgui crate, using OpenGl via glow"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/rodrigorc/easy-imgui-rs"
categories = ["gui"]
keywords = ["imgui", "ui", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-imgui-sys = "0.19.0"
easy-imgui = "0.19.0"
easy-imgui-opengl = "0.2"

anyhow = "1"
cgmath = "0.18"
smallvec = "1"
log = "0.4"
