[package]
name = "easy-imgui-sdl3"
version = "0.19.0"
edition = "2024"
description = "Binding of the SDL3+OpenGL3 Dear Imgui backends for the easy-imgui"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/rodrigorc/easy-imgui-rs"
categories = ["gui"]
keywords = ["imgui", "ui", "graphics", "sdl3"]

[features]
default = []
freetype = ["easy-imgui/freetype"]

[dependencies]
# Ensure that sdl3 and easy-imgui-sys depend on the same version of sdl3-sys crate
sdl3 = "0.16.1"
glow = "0.16.0"
send_wrapper = "0.6.0"

[dependencies.easy-imgui-sys]
version = "=0.19.0"
features = ["backend-opengl3", "backend-sdl3"]
path = "../easy-imgui-sys"

[dependencies.easy-imgui]
version = "=0.19.0"
path = "../easy-imgui"
features = ["future"]

[build-dependencies]
bindgen = "0.72"
cc = "1"

[dev-dependencies]
smol = "2.0.2"
