[package]
name = "easy-imgui-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "imgui"
description = "Low level bindings for the Dear ImGui C++ library"
license = "MIT"

[build-dependencies]
bindgen = "0.69"
cc = "1"
pkg-config = "0.3"
xshell = "0.2"

[features]
freetype = []
docking = []
