[package]
name = "easy-imgui-sys"
version = "0.15.0"
edition = "2021"
build = "build.rs"
links = "imgui"
description = "Low level bindings for the Dear ImGui C++ library"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/rodrigorc/easy-imgui-rs"
categories = ["gui"]
keywords = ["imgui", "ui", "graphics"]

[build-dependencies]
bindgen = "0.71"
cc = "1"
pkg-config = "0.3"
xshell = "0.2"

[features]
freetype = []
