[package]
name = "easy-imgui-sys"
version = "0.20.1"
edition = "2024"
build = "build.rs"
links = "imgui"
description = "Low level bindings for the Dear ImGui C++ library"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/rodrigorc/easy-imgui-rs"
categories = ["gui"]
keywords = ["imgui", "ui", "graphics"]

[features]
freetype = []
backend-opengl3 = []
backend-sdl3 = ["dep:sdl3-sys"]

[dependencies]
sdl3-sys = { version = "0.5.7", optional = true }

[build-dependencies]
bindgen = "0.72"
cc = "1"
pkg-config = "0.3"
xshell = "0.2"
