[package]
name = "easy-imgui-window"
version = "0.13.0"
edition = "2021"
description = "Default windowing for the easy-imgui crate using winit and easy-imgui-renderer"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/rodrigorc/easy-imgui-rs"
categories = ["gui"]
keywords = ["imgui", "ui", "graphics"]

[features]
default = ["clipboard", "main-window"]
clipboard = ["dep:arboard"]
freetype = ["easy-imgui/freetype"]
main-window = ["dep:glutin-winit"]
docking = ["easy-imgui/docking"]

# This is not really needed except for the examples/demo
# docking = ["easy-imgui/docking"]

[dependencies]
easy-imgui-sys = { version = "=0.13.0", path = "../easy-imgui-sys" }
easy-imgui = { version = "=0.13.0", path = "../easy-imgui" }
easy-imgui-renderer = { version = "=0.13.0", path = "../easy-imgui-renderer" }

log ="0.4"
anyhow = "1"
bitflags = "2"
glutin = "0.32"
glutin-winit = { version = "0.5", optional = true }
raw-window-handle = "0.6"
arboard = { version = "3", optional = true, default-features = false }
winit = { version = "0.30", features = ["x11", "mint"] }
futures = "0.3.31"
send_wrapper = "0.6"

# For the examples
[dev-dependencies]
simple_logger = "5"
gilrs = "0.11"
anyhow = "1"
image = { version = "0.25" }
game-loop = { version = "=1.3", features = ["winit"] }
async-std = "1.13.0"

