[package]
name = "easy-imgui"
version = "0.18.0"
edition = "2024"
description = "Rust wrapper for the Dear ImGui library"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/rodrigorc/easy-imgui-rs"
categories = ["gui"]
keywords = ["imgui", "ui", "graphics"]

[dependencies]
easy-imgui-sys = { version = "=0.18.0", path = "../easy-imgui-sys" }
paste = "1"
bitflags = "2"
mint = "0.5"
cgmath = { version = "0.18", features = ["mint"] }
image = { version = "0.25", default-features = false }
log = "0.4"

[features]
default = []
freetype = ["easy-imgui-sys/freetype"]

