[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dear_imgui-sys = { path = "../dear_imgui-sys", features = ["freetype"] }
dear_imgui = { path = "../dear_imgui", features = ["freetype"] }

anyhow = "*"
smallvec = "*"
cstr = "*"
cgmath = "*"

gl_loader = "0.1"
gl = "0.14"
glutin = "0.30"
glutin-winit = "0.3"
raw-window-handle = "0.5"
clipboard = "0.5"
winit = { version = "0.28", features = ["x11"] }
