[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
dear_imgui-sys = { path = "../dear_imgui-sys", features = ["freetype"] }
dear_imgui = { path = "../dear_imgui", features = ["freetype"] }
dear_imgui_renderer = { path = "../dear_imgui_renderer" }

anyhow = "*"
smallvec = "*"
cstr = "*"
cgmath = "*"

glow = "*"
glutin = "0.30"
glutin-winit = "0.3"
raw-window-handle = "0.5"
clipboard = "0.5"
winit = { version = "0.28", features = ["x11"] }
