[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
dear_imgui-sys = { path = "../dear_imgui-sys", features = ["freetype"] }
dear_imgui = { path = "../dear_imgui", features = ["freetype"] }
dear_imgui_renderer = { path = "../dear_imgui_renderer" }

anyhow = "*"
smallvec = "*"
cstr = "*"
cgmath = "*"

glow = "*"
glutin = "*"
glutin-winit = "*"
winit = { version = "*", features = ["x11"] }
image = { version = "*", default_features = false, features = ["png"] }