[package]
name = "gamepad"
version = "0.1.0"
edition = "2021"

[dependencies]
dear_imgui-sys = { path = "../dear_imgui-sys" }
dear_imgui = { path = "../dear_imgui" }
dear_imgui_renderer = { path = "../dear_imgui_renderer" }

glow = "*"
glutin = "0.30"
glutin-winit = "0.3"
raw-window-handle = "0.5"
clipboard = "0.5"
winit = { version = "0.28", features = ["x11"] }
gilrs = "*"
anyhow = "*"