[package]
name = "gamepad"
version = "0.1.0"
edition = "2021"

[dependencies]
dear_imgui-sys = { path = "../dear_imgui-sys" }
dear_imgui = { path = "../dear_imgui" }
dear_imgui_renderer = { path = "../dear_imgui_renderer" }

glow = "*"
glutin = "*"
glutin-winit = "*"
winit = { version = "*", features = ["x11"] }
gilrs = "*"
anyhow = "*"
